--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm-run-all -p client server",
+    "start": "react-scripts start",
     "client": "react-scripts start",
     "server": "json-server --port 3001 --watch server/db.json",
     "seed": "node server/seed.js",
@@ -12,9 +12,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "bootstrap": "4.3.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-scripts": "2.1.5"
+    "react-router-dom": "4.3.1",
+    "react-scripts": "^3.3.0"
   },
   "devDependencies": {
     "faker": "^4.1.0",
